--- a/exercicio1/style.css
+++ b/exercicio1/style.css
@@ -8,6 +8,10 @@
   width: 100vw;
   background-color: lightgray;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .item {
@@ -15,4 +19,10 @@
   background-color: white;
   height: 180px;
   width: 180px;
+}
+
+div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
