--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -6,4 +6,8 @@
 main{
   padding-top: 20px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 2vh;
+  justify-content: center;
 }
